--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ input {
   width: 300px;
 }
 
-button {
+.submitButton {
   background-color: green;
   color: white;
   border: none;
@@ -44,13 +44,27 @@ button {
   margin-top: 5px;
 }
 
+.submitButton:hover {
+  background-color: darkgreen;
+}
+
+td button {
+  background-color: darkred;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 8px 15px;
+  margin-top: 5px;
+}
+
 .button {
   display: flex;
   justify-content: center;
 }
 
-button:hover, button:focus {
-  background-color: darkgreen;
+td button:hover, td button:focus {
+  background-color: indianred;
 }
 
 table {
